--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>CSS DEMO SITE</title>
+    <title>Horiseon Solution Service</title>
 </head>
 
 <body>
@@ -49,21 +49,21 @@
         </div>
     </div>
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-types"> <!--Renamed the class with a common name-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt ="placeholder image" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-types"> <!--Renamed the class with a common name-->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt ="placeholder image" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-types"> <!--Renamed the class with a common name-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="placeholder image"/>
             <p>
@@ -71,9 +71,9 @@
             </p>
         </div>
     </div>
-    <!--The footer can be removed because it do not match the Mockup-->
-   <!--<div class="footer">
-         <h2>Made with ❤️️ by Horiseon</h2>
+    <!--The footer content can be removed because it do not match the Mockup-->
+   <div class="footer">
+        <!-- <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
