--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <div><nav>
             <ul>
+                
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -21,7 +22,7 @@
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
-            </ul>
+            </ul></nav>
         </div>
     </div>
     <div class="hero"></div>
